Corrected Few classes.